k8s/009-projects/001-custom/calc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
        - name: calc
          image: linuxramu/calc:2.5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: calc-service
spec:
  selector:
    app: calc
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
