k8s/009-projects/001-custom/color.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
        - name: color
          image: linuxramu/color:2.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-service
spec:
  selector:
    app: color
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
