k8s/009-projects/001-custom/horo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horo
  template:
    metadata:
      labels:
        app: horo
    spec:
      containers:
        - name: horo
          image: linuxramu/horo:2.5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: horo-service
spec:
  selector:
    app: horo
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
