k8s/009-projects/001-custom/all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  # - host: aks-helloworld.<CLUSTER_SPECIFIC_DNS_ZONE>
  - host: apps.8e1005bc066142c3b353.southafricanorth.aksapp.io
    http:
      paths:
      - path: /calc
        pathType: Prefix
        backend:
          service: 
            name: calc-service
            port: 
              number: 80
      - path: /color
        pathType: Prefix
        backend:
          service: 
            name: color-service
            port: 
              number: 80
      - path: /horo
        pathType: Prefix
        backend:
          service: 
            name: horo-service
            port: 
              number: 80
